--- a/webapp/views/home-dashboard.ejs
+++ b/webapp/views/home-dashboard.ejs
@@ -22,7 +22,7 @@
             
               <div class="flex--box d-flex justify-content-center">
                 <a href="/profile/<%= user.username %>" id="name" class="mr-2 text-center" style="z-index: 10; font-size: 1.4rem;"><%= user.username %></a>
-                <span class="header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment" style="font-size: .9rem; color: black;"></i></span>  
+                <!-- <span class="header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment" style="font-size: .9rem; color: black;"></i></span>   -->
               </div>
               </div>
     </div>
