--- a/home-dashboard.ejs
+++ b/home-dashboard.ejs
@@ -3,132 +3,106 @@
 
   <%- include('includes/flash')%>
 
-    <section class="gridcontainer">
+    <section  class="gridcontainer">
 
-      <div>
-        <img class="menu_icon item" src="/images/menu_icon.png">
-      </div>
-
-      <div class="profile_widget item1">
-        <a id="link" href="profile.ejs">
-
-          <div class="profile--widget">
-            <a href="/profile/<%= user.username %>" class="mr-2">
-              <img class="avatar-large" title="<%= user.username %>" data-toggle="tooltip" data-placement="bottom"
-                style=" border-radius: 50px;" src="<%= user.avatar %>"></a>
-
-            <div class="flex--box d-flex justify-content-center">
-              <a href="/profile/<%= user.username %>" id="name" class="mr-2 text-center"
-                style="z-index: 10; font-size: 1.4rem;">
-                <%= user.username %>
-              </a>
-              <!-- <span class="header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment" style="font-size: .9rem; color: black;"></i></span>   -->
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div id="map" class="maps_widget item2"></div>
-      <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwaZh4LZ9pza24U9ewbCdiLvIh27etaCI&callback=initMap">
-        </script>
-
-      <div class="weather_widget item3">
-        <a id="link" href="weather.html">
-
-          <!-- <div class="app-title"> -->
-          <div class="location">
-            <p>-</p>
-          </div>
-          <!-- </div> -->
-          <div class="notification"> </div>
-          <div class="weather-container">
-            <div class="weather-icon">
-              <img src="weather/icons/unknown.png" alt="">
-            </div>
-        <div class="temperature-value">
-          <p>- °<span>C</span></p>
+        <div>
+          <img class="menu_icon item" src="/images/menu_icon.png">
         </div>
-        <div class="temperature-description">
-          <p> - </p>
-        </div>
-      </div>
-    </a>
 
-      </div>
+        <div class="profile_widget item1">
+          <a id="link" href="profile.ejs">
 
-      <script defer src="weather/app.js"></script>
+            <div class="profile--widget">
+              <a href="/profile/<%= user.username %>" class="mr-2">
+                <img class="avatar-large" title="<%= user.username %>" data-toggle="tooltip" data-placement="bottom"
+                  style=" border-radius: 50px;" src="<%= user.avatar %>"></a>
 
-
-
-
-      <div class="calendar_widget item4">
-        <a id="link" href="/calendar.html">
-          
-          <!-- Insert Calendar Widget here -->
-          <!-- <div class="leftWiget"> -->
-            <div class="calendarWiget">
-              <div class="monthWiget">
-                <i class="fas fa-angle-left prev"></i>
-                <div class="date">Mar 2023</div>
-                <i class="fas fa-angle-right next"></i>
-              </div>
-              <div class="weekdaysWiget">
-                <div>Sun</div>
-                <div>Mon</div>
-                <div>Tue</div>
-                <div>Wed</div>
-                <div>Thu</div>
-                <div>Fri</div>
-                <div>Sat</div>
-              </div>
-              <div class="daysWiget"></div>
-              <div class="goto-todayWiget">
-                <div class="gotoWiget">
-                  <input type="text" placeholder="mm/yyyy" class="date-input" />
-                  <button class="goto-btnWiget">Go</button>
-                </div>
-                <!-- <button class="today-btnWiget">Today</button> -->
+              <div class="flex--box d-flex justify-content-center">
+                <a href="/profile/<%= user.username %>" id="name" class="mr-2 text-center"
+                  style="z-index: 10; font-size: 1.4rem;">
+                  <%= user.username %>
+                </a>
+                <!-- <span class="header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment" style="font-size: .9rem; color: black;"></i></span>   -->
               </div>
             </div>
-          <!-- </div> -->
+          </a>
+        </div>
 
-          
-    
-        </a>
-      </div>
-      <!-- Insert Calendar Widget Script here -->
-      <script src="calendar/fullscript.js"></script>
-      <!-- <script src="/caledar/script2.js"></script> -->
+        <div id="map" class="maps_widget item2"></div>
+
+        <script async
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwaZh4LZ9pza24U9ewbCdiLvIh27etaCI&callback=initMap">
+          </script>
+
+        <div class="weather_widget item3">
+          <a id="link" href="weather.html">
+
+            <!-- <div class="app-title"> -->
+            <div class="location">
+              <p>-</p>
+            </div>
+            <!-- </div> -->
+            <div class="notification"> </div>
+            <div class="weather-container">
+              <div class="weather-icon">
+                <img src="weather/icons/unknown.png" alt="">
+              </div>
+              <div class="temperature-value">
+                <p>- °<span>C</span></p>
+              </div>
+              <div class="temperature-description">
+                <p> - </p>
+              </div>
+            </div>
+          </a>
+
+        </div>
+
+        <script defer src="weather/app.js"></script>
 
 
-      <div class="emercency_services_widget item5">
-        <a id="link" href="/emergencyServices.html">
-          Emercency Services
-          <!-- Insert Emercency Services  Widget here -->
-
-        </a>
-      </div>
-      <!-- Insert Emercency Services  Widget Script here -->
 
 
+        <div class="calendar_widget item4">
+          <a id="link" href="/calendar.html">
+
+            <!-- Insert Date here -->
 
 
-      <div class="forum_widget item6">
+          </a>
+        </div>
+        <!-- Insert Calendar Widget Script here -->
+        <script src="/IP3Project/webapp/public/calendar/fullscript.js"></script>
+        <!-- <script src="/caledar/script2.js"></script> -->
+
+
+        <div class="emercency_services_widget item5">
+          <a id="link" href="/emergencyServices.html">
+            Emercency Services
+            <!-- Insert Emercency Services  Widget here -->
+
+          </a>
+        </div>
+        <!-- Insert Emercency Services  Widget Script here -->
+
+
+
+
+        <div class="forum_widget item6">
 
           <%- include('./forum') %>
-      </div>
+        </div>
 
 
 
-      <div class="attractions_widget item7">
-        <a id="link" href="/attraction.html">
-          Attractions
-          <!-- Insert Attractions Widget here -->
+        <div class="attractions_widget item7">
+          <a id="link" href="/attraction.html">
+            Attractions
+            <!-- Insert Attractions Widget here -->
 
-        </a>
-      </div>
-      <!-- Insert Attractions Widget Script here -->
+          </a>
+        </div>
+        <!-- Insert Attractions Widget Script here -->
     </section>
 
 
