--- a/profile-following.ejs
+++ b/profile-following.ejs
@@ -11,7 +11,7 @@
   </div>
 </article>
 
-<div class="container py-md-5 container--narrow">
+<div id="container" class="container py-md-5 container--narrow">
 
   <%- include('includes/flash') %>
   <%- include('includes/profileShared') %>
