--- a/profile.ejs
+++ b/profile.ejs
@@ -9,7 +9,7 @@
     </div>
   </article>
 
-  <div class="container py-md-5 container--narrow">
+  <div id="container" class="container py-md-5 container--narrow">
 
     <%- include('includes/flash') %>
       <%- include('includes/profileShared') %>
