--- a/public/css/dami_style.css
+++ b/public/css/dami_style.css
@@ -140,7 +140,9 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(215, 215, 215, 0.911);
+  background-color: rgba(255, 255, 255, 0.6);
+  /* background-color: rgb(0,0,0);  */
+
   visibility: hidden;
   opacity: 0;
   transform: scale(1.3);
@@ -164,7 +166,7 @@
 .live-search-field {
   background-color: transparent;
   border: none;
-  font-size: 1.1rem;
+  font-size: 18px;
   outline: none;
   flex: 1;
   color: #007bff;
@@ -191,11 +193,13 @@
   display: flex;
   align-items: center;
   /* padding-top: 15px; */
-  padding-bottom: 15px;
+  /* padding-bottom: 1px; */
 }
 
 .search-overlay-bottom {
   overflow: auto;
+  
+ 
 }
 
 .close-live-search {
@@ -203,7 +207,8 @@
   cursor: pointer;
   opacity: .75;
   line-height: 1;
-  color: #292929;
+  /* color: #292929; */
+  padding-left: 40px;
 }
 
 @media (min-width: 700px) {
@@ -222,6 +227,7 @@
 
 .close-live-search:hover {
   opacity: 1;
+  color: #da2e2e;
 }
 
 @-webkit-keyframes spin {
@@ -264,7 +270,7 @@
 
 .container--narrow {
   max-width: 732px;
-  margin: 30px auto 7% auto;
+  margin: 30px auto ;
 
 }
 
