--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -1,47 +1,60 @@
-
 /* dashboard css start */
 /* dashboard css start */
 /* dashboard css start */
 
 /* Layout */
-        
+
 .gridcontainer {
     display: grid;
     grid-template-columns: 0.1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1m;
     grid-auto-rows: 8.75em;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(../images2/home3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+
 }
+
+/* .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(52, 52, 52, 0.3);
+  } */
 
 .gridcontainer div {
     text-align: center;
     /* font-weight: bolder;    changes the text of the whole application  */
-    margin: 10px; /*   margin: 10px;  */
+    margin: 10px;
+    /*   margin: 10px;  */
     font-size: 20px;
+
+
 }
 
 .menu_icon {
-    margin: 20px;     
+    margin: 20px;
 }
 
 .profile_widget {
     /* border: 3px solid #46593f; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 15%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
-  }
+}
 
 .maps_widget {
     /* border: 3px solid rgb(139, 0, 93); */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 15%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
-
 }
 
-    .weather_widget {
+.weather_widget {
     /* border: 3px solid purple; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 15%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
     height: 250px;
@@ -50,7 +63,7 @@
 
 .calendar_widget {
     /* border: 3px solid green; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 15%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
 
@@ -58,7 +71,7 @@
 
 .emercency_services_widget {
     /* border: 3px solid salmon; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 18%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
 
@@ -66,7 +79,7 @@
 
 .forum_widget {
     /* border: 3px solid green; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 17%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
     height: auto;
@@ -74,7 +87,7 @@
 
 .attractions_widget {
     /* border: 3px solid salmon; */
-    background-color: white;
+    background-color: #f5f5f5ca;
     border-radius: 15%;
     box-shadow: 0 0 8px rgb(56, 77, 48);
 
@@ -98,7 +111,7 @@
 
 .item3 {
     grid-column: 5 / span 1;
-    grid-row: 1 / span 2; 
+    grid-row: 1 / span 2;
     /* original value */
     /* grid-column: 5 / span 1; */
     /* grid-row: 1 / span 2;  */
