--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,10 +3,13 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 body {
-  background-color: #b4ceaa;
+  /* background-color: #b4ceaa; */
+  /* background-image: url(../images/launch2.jpeg) ; */
+  
   /* font: 16px "Quicksand", "Calibri"; */
 }
 
@@ -19,6 +22,9 @@ h1 {
 #link {
   text-decoration: none;
 }
+
+node calendar-icon-api.js
+
 
 
 /* Index page  */
@@ -445,12 +451,13 @@ height: 20px; */
 #search {
   text-align: left;
   color: #ADAAAA;
-  font-size: 18px;
+  /* font-size: 18px; */
   font-weight: 100;
   background-color: #ffffff;
-  padding: 1rem;
-  margin: 2rem;
+  padding: 0.5rem;
+  margin: 1rem;
   flex: 2;
+  border: 1px solid grey;
 
 
 }
@@ -497,9 +504,11 @@ height: 20px; */
 #container {
   width: 90%;
   border: 1px solid;
-  margin: 30px auto;
+  margin: auto auto auto auto;
   background-color: rgba(255, 255, 255, 0.6);
-  padding: 20px;
+  padding: 10px;
+  background-color: rgba(58, 115, 46, 0.121);
+
 }
 
 #post_container {
@@ -507,6 +516,7 @@ height: 20px; */
   text-align: left;
   border-radius: revert;
   margin: 20px;
+  
 }
 
 #post_container a {
@@ -518,6 +528,8 @@ height: 20px; */
   font-size: 18px;
   /* text-align: left; */
   font-weight: 100;
+  margin-left: 10px
+
 }
 
 #post_username {
@@ -552,7 +564,8 @@ height: 20px; */
   border: 1px solid;
 
   margin-bottom: 7%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(58, 115, 46, 0.121);
+  ;
 }
 
 #individual_post_title {
@@ -574,6 +587,10 @@ height: 20px; */
 /* Calendar Page Styling */
 /* Calendar Page Styling */
 /* Calendar Page Styling */
+
+#calendar_container{
+  padding: 20px;
+}
 
 .left {
   /* width: 70%; */
@@ -655,8 +672,8 @@ height: 20px; */
 }
 
 .calendar .days .day {
-  width: 14.28%;
-  height: 80px;
+  width: 13.28%;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -688,6 +705,8 @@ height: 20px; */
   text-decoration: rgba(244, 47, 47, 0.447) underline 2px;
   text-underline-offset: 1em;
   background-color: var(--primary-clr);
+  /* background-color: rgba(58, 115, 46, 0.121); */
+
 }
 
 .calendar .days .prev-date,
@@ -1332,6 +1351,7 @@ height: 20px; */
   text-decoration: rgba(244, 47, 47, 0.447) underline 2px;
   text-underline-offset: 1em;
   background-color: var(--primary-clr);
+
 }
 
 .calendarWiget .daysWiget .prev-date,
